--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  color: white;
+  font-size: calc(10px + 2vmin);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -14,14 +21,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+main {
+  margin: 0 auto;
+  padding: 40px 14px 10px;
+  border: 1px solid #ececec;
+  border-radius: 8px;
+  background: #383d48;
+}
+
+footer {
+  margin: 20px;
 }
