feat: 适配移动端

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   color: white;
   font-size: calc(10px + 2vmin);
   display: flex;
@@ -10,7 +10,7 @@
 }
 
 .App-logo {
-  height: 10vmin;
+  height: 8vmin;
   pointer-events: none;
 }
 
@@ -21,6 +21,7 @@
 }
 
 .App-header {
+  margin: 10px 0;
   display: flex;
 }
 
