--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .App-logo {
-  height: 8vmin;
+  height: 40px;
   pointer-events: none;
 }
 
@@ -40,7 +40,7 @@
 
 main {
   margin: 0 auto;
-  padding: 40px 14px 10px;
+  padding: 2rem 1rem 0.5rem;
   border: 1px solid #ececec;
   border-radius: 8px;
   background: #383d48;
@@ -48,4 +48,5 @@ main {
 
 footer {
   margin: 20px;
+  font-size: 18px;
 }
